revert ff animation frame cropping fix

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -905,7 +905,6 @@ a.flair12:hover {
     text-indent: -90000px;
     vertical-align: middle;
     padding-left: 0.5em;
-    image-rendering: -moz-crisp-edges;
 }
 .chat-combo {
     color: $color-chat-text1;
